--- a/Day8_InClass_Exercises.rmd
+++ b/Day8_InClass_Exercises.rmd
@@ -11,6 +11,11 @@ output:nhtml_document
 Make a list that contains the information on a single playing card. Suit, face, and value. 
 
 ```{r}
+card <- list(
+  suit = "clubs",
+  face = "queen",
+  value = 10
+)
 
 
 ```
@@ -19,7 +24,7 @@ Make a list that contains the information on a single playing card. Suit, face, 
 Make a second list where each element contains all the options for suit, face, and value, respectively. 
 
 ```{r}
-
+allcards <- list( suits = c("hearts","diamonds","clubs", "spades"), face = c("ace","two","three","four","five","six","seven","eight","nine","ten","jack","queen","king","joker"), value = c(1,2,3,4,5,6,7,8,9,10,10,10,10,10))
 
 ```
 
@@ -37,6 +42,7 @@ If `b <- list(a=1:10, c="Hello", d="AA")`, write an R expression that will give 
 ```{r}
 b <- list(a=1:10, c="Hello", d="AA")
 
+b$a[b$a > 7]
 
 ```
 
@@ -44,6 +50,6 @@ Let `x <- list(a=5:10, c="Hello", d="AA")`, write an R statement to add a new it
 
 ```{r}
 x <- list(a=5:10, c="Hello", d="AA")
-
+x$z <- "NewItem"
 
 ```
